syntax = "proto3";

option java_package = "io.xdea.xmux.forum.dto";
option java_outer_classname = "SavedGrpcApi";

import "validate/validate.proto";

package xmux.forum.v4;

message SaveThreadReq {
  int32 threadId = 1;
}

message UnsaveThreadReq {
  int32 threadId = 1;
}

message SavePostReq {
  int32 postId = 1;
}

message UnsavePostReq {
  int32 postId = 1;
}

message GetSavedThreadsReq {
  int32 offset = 1;
  int32 count = 2;
}

message GetSavedPostsReq {
  int32 offset = 1;
  int32 count = 2;
}