syntax = "proto3";

option java_package = "io.xdea.xmux.forum.dto";
option java_outer_classname = "ForumGrpcApi";

import "google/protobuf/empty.proto";
import "group.proto";
import "post.proto";
import "reply.proto";
import "saved.proto";
import "notif.proto";
package xmux.forum.v4;

service Forum {
  // Group
  rpc CreateGroup(CreateGroupReq) returns (CreateGroupResp);
  rpc RemoveGroup(GroupIdMsg) returns (google.protobuf.Empty);
  rpc JoinGroup(MembershipMsg) returns (google.protobuf.Empty);
  rpc LeaveGroup(MembershipMsg) returns (google.protobuf.Empty);
  rpc GetGroups(GetGroupsReq) returns (GetGroupsResp);
  rpc GetUserGroups(google.protobuf.Empty) returns (GetUserGroupsResp);
  // Post
  rpc CreatePost(CreatePostReq) returns (CreatePostResp);
  rpc RemovePost(UpdatePostReq) returns (google.protobuf.Empty);
  rpc GetPost(GetPostReq) returns (GetPostResp);
  rpc GetPostById(GetPostByIdReq) returns (PostDetails);
  rpc UpvotePost(UpdatePostReq) returns (google.protobuf.Empty);
  rpc DownvotePost(UpdatePostReq) returns (google.protobuf.Empty);
  rpc toggleBestPost(UpdatePostReq) returns (google.protobuf.Empty);
  rpc toggleTopPost(UpdatePostReq) returns (google.protobuf.Empty);
  // Reply
  rpc CreateReply(CreateReplyReq) returns (CreateReplyResp);
  rpc GetReply(GetReplyReq) returns (GetReplyResp);
  rpc GetUserReply(GetUserReplyReq) returns (GetReplyResp);
  rpc GetReplyById(GetReplyByIdReq) returns (Reply);
  rpc RemoveReply(UpdateReplyReq) returns (google.protobuf.Empty);
  rpc UpvoteReply(UpdateReplyReq) returns (google.protobuf.Empty);
  rpc DownvoteReply(UpdateReplyReq) returns (google.protobuf.Empty);
  // Saved
  rpc SavePost(SaveReq) returns (SaveResp);
  rpc SaveReply(SaveReq) returns (SaveResp);
  rpc RemoveSavedPost(SaveReq) returns (google.protobuf.Empty);
  rpc RemoveSavedReply(SaveReq) returns (google.protobuf.Empty);
  rpc GetSavedPost(GetSavedReq) returns (GetPostResp);
  rpc GetSavedReply(GetSavedReq) returns (GetReplyResp);
  // Notif
  rpc GetNotifNum(google.protobuf.Empty) returns (GetNotifNumResp);
  rpc GetNotif(GetNotifReq) returns (GetNotifResp);
  rpc NotifMarkAsRead(NotifMarkAsReadReq) returns (google.protobuf.Empty);
}