syntax = "proto3";

// options for Java generated sources
//option java_multiple_files = true;
option java_package = "com.flyingblu.community.dto";
option java_outer_classname = "PostGrpcApi";

package flyingblu.community;

message CreatePostReq {
  string token = 1;
  string title = 2;
  string body = 3;
  int32 communityId = 4;
}

message CreatePostResp {
  int32 postId = 1;
}

service PostService {
  rpc CreatePost(CreatePostReq) returns (CreatePostResp);
}